# BEM-Elastic_2D

./: README.md  pyproject.toml  requirements.txt  setup.py
Bem2d_e/: __init__.py
Bem2d_e/documentation/: The_Code_explained.ipynb
Bem2d_e/gmsh/: plate.geo
Bem2d_e/script/: Bem-2d-elastic-master.py  Rotating_disc.py
Bem2d_e/src/: boundcond.py  geometry.py  graphics.py
documentation/: The_Code_explained.ipynb  Tthe_Code_explained.ipynb
gmsh/: plate.msh
script/: Bem-2d-elastic-master.py
src/: boundcond.py  geometry.py  graphics.py  matrices.py
